--- a/EngineQ/EngineTest/EngineTest.vcxproj
+++ b/EngineQ/EngineTest/EngineTest.vcxproj
@@ -71,23 +71,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(ProjectDir)bin\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)obj\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)_Build\bin\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)_Build\obj\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(ProjectDir)bin\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)obj\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)_Build\bin\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)_Build\obj\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(ProjectDir)bin\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)obj\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)_Build\bin\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)_Build\obj\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(ProjectDir)bin\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)obj\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)_Build\bin\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)_Build\obj\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -101,7 +101,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)EngineQ\bin\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)EngineQ\_Build\bin\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>EngineQ.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -117,7 +117,7 @@ xcopy "$(SolutionDir)EngineQScripting\bin\$(Configuration)\EngineQ.dll" "$(Outpu
 xcopy "$(SolutionDir)Libraries\Mono\config" "$(OutputPath)config\" /E /Y /D
 xcopy "$(SolutionDir)Libraries\Mono\libraries" "$(OutputPath)libraries\" /E /Y /D
 
-xcopy "$(ProjectDir)Resources\*" "$(OutputPath)" /E /Y /D
+xcopy "$(ProjectDir)_Resources\*" "$(OutputPath)" /E /Y /D
 if not exist "$(OutputPath)Scripts" mkdir "$(OutputPath)Scripts"
 
 xcopy "$(SolutionDir)ScriptTest\bin\$(Configuration)\ScriptTest.dll" "$(OutputPath)Scripts\" /D /Y</Command>
@@ -138,7 +138,7 @@ xcopy "$(SolutionDir)ScriptTest\bin\$(Configuration)\ScriptTest.dll" "$(OutputPa
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)EngineQ\bin\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)EngineQ\_Build\bin\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>EngineQ.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -154,7 +154,7 @@ xcopy "$(SolutionDir)EngineQScripting\bin\$(Configuration)\EngineQ.dll" "$(Outpu
 xcopy "$(SolutionDir)Libraries\Mono\config" "$(OutputPath)config\" /E /Y /D
 xcopy "$(SolutionDir)Libraries\Mono\libraries" "$(OutputPath)libraries\" /E /Y /D
 
-xcopy "$(ProjectDir)Resources\*" "$(OutputPath)" /E /Y /D
+xcopy "$(ProjectDir)_Resources\*" "$(OutputPath)" /E /Y /D
 if not exist "$(OutputPath)Scripts" mkdir "$(OutputPath)Scripts"
 
 xcopy "$(SolutionDir)ScriptTest\bin\$(Configuration)\ScriptTest.dll" "$(OutputPath)Scripts\" /D /Y</Command>
@@ -179,7 +179,7 @@ xcopy "$(SolutionDir)ScriptTest\bin\$(Configuration)\ScriptTest.dll" "$(OutputPa
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)EngineQ\bin\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)EngineQ\_Build\bin\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>EngineQ.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -195,7 +195,7 @@ xcopy "$(SolutionDir)EngineQScripting\bin\$(Configuration)\EngineQ.dll" "$(Outpu
 xcopy "$(SolutionDir)Libraries\Mono\config" "$(OutputPath)config\" /E /Y /D
 xcopy "$(SolutionDir)Libraries\Mono\libraries" "$(OutputPath)libraries\" /E /Y /D
 
-xcopy "$(ProjectDir)Resources\*" "$(OutputPath)" /E /Y /D
+xcopy "$(ProjectDir)_Resources\*" "$(OutputPath)" /E /Y /D
 if not exist "$(OutputPath)Scripts" mkdir "$(OutputPath)Scripts"
 
 xcopy "$(SolutionDir)ScriptTest\bin\$(Configuration)\ScriptTest.dll" "$(OutputPath)Scripts\" /D /Y</Command>
@@ -220,7 +220,7 @@ xcopy "$(SolutionDir)ScriptTest\bin\$(Configuration)\ScriptTest.dll" "$(OutputPa
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)EngineQ\bin\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)EngineQ\_Build\bin\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>EngineQ.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -236,7 +236,7 @@ xcopy "$(SolutionDir)EngineQScripting\bin\$(Configuration)\EngineQ.dll" "$(Outpu
 xcopy "$(SolutionDir)Libraries\Mono\config" "$(OutputPath)config\" /E /Y /D
 xcopy "$(SolutionDir)Libraries\Mono\libraries" "$(OutputPath)libraries\" /E /Y /D
 
-xcopy "$(ProjectDir)Resources\*" "$(OutputPath)" /E /Y /D
+xcopy "$(ProjectDir)_Resources\*" "$(OutputPath)" /E /Y /D
 if not exist "$(OutputPath)Scripts" mkdir "$(OutputPath)Scripts"
 
 xcopy "$(SolutionDir)ScriptTest\bin\$(Configuration)\ScriptTest.dll" "$(OutputPath)Scripts\" /D /Y</Command>
@@ -249,12 +249,12 @@ xcopy "$(SolutionDir)ScriptTest\bin\$(Configuration)\ScriptTest.dll" "$(OutputPa
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Shaders\Test\Simple.frag">
+    <None Include="_Resources\Shaders\Test\Simple.frag">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Shaders\Test\Simple.vert">
+    <None Include="_Resources\Shaders\Test\Simple.vert">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
