Basic model loader

--- a/EngineQ/EngineQ/EngineQ.vcxproj
+++ b/EngineQ/EngineQ/EngineQ.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="ResourceManager.hpp" />
     <ClInclude Include="Resources\Model.hpp" />
     <ClInclude Include="Resources\ModelLoader.hpp" />
+    <ClInclude Include="Resources\Types.hpp" />
     <ClInclude Include="Scripting\API_Application.hpp" />
     <ClInclude Include="Scripting\API_Input.hpp" />
     <ClInclude Include="Scripting\API_TimeCounter.hpp" />
