--- a/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj
+++ b/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj
@@ -250,11 +250,10 @@ xcopy "$(SolutionDir)EngineQDemonstrationScripts\bin\$(Configuration)\QScripts.d
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <None Include="_Resources\TMP\Shader.shader" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="_Resources\Shaders\BasicCommon.shh" />
-    <None Include="_Resources\TMP\Shader.shader" />
+    <ClCompile Include="TmpMain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
