--- a/EngineQ/EngineQ/EngineQ.vcxproj
+++ b/EngineQ/EngineQ/EngineQ.vcxproj
@@ -30,7 +30,6 @@
     <ClCompile Include="InputController.cpp" />
     <ClCompile Include="Math\Utilities.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
-    <ClCompile Include="Resources\Model.cpp" />
     <ClCompile Include="Resources\ModelLoader.cpp" />
     <ClCompile Include="Scripting\API_Application.cpp" />
     <ClCompile Include="Scripting\API_Input.cpp" />
@@ -158,6 +157,7 @@
     <None Include="Math\Vector3.inl" />
     <None Include="Math\Vector4.inl" />
     <None Include="ResourceManager.inl" />
+    <None Include="Resources\Model.inl" />
     <None Include="Scripting\ScriptEngine.inl" />
     <None Include="Serialization\Deserializer.inl" />
     <None Include="Serialization\SerializationEngine.inl" />
