--- a/EngineQ/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/EngineQScripting/EngineQScripting.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
+    <Compile Include="Renderable.cs" />
     <Compile Include="Light.cs" />
     <Compile Include="Component.cs" />
     <Compile Include="Entity.cs" />
