--- a/EngineQ/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/EngineQScripting/EngineQScripting.csproj
@@ -68,8 +68,11 @@
     <Compile Include="Object.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Resource.cs" />
     <Compile Include="Scene.cs" />
     <Compile Include="Script.cs" />
+    <Compile Include="Shader.cs" />
+    <Compile Include="Texture.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
