--- a/EngineQ/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/EngineQScripting/EngineQScripting.csproj
@@ -69,9 +69,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Resource.cs" />
+    <Compile Include="ResourceManager.cs" />
     <Compile Include="Scene.cs" />
     <Compile Include="Script.cs" />
     <Compile Include="Shader.cs" />
+    <Compile Include="ShaderProperties.cs" />
     <Compile Include="Texture.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="Transform.cs" />
