--- a/EngineQ/EngineQ/EngineQ.vcxproj
+++ b/EngineQ/EngineQ/EngineQ.vcxproj
@@ -36,6 +36,8 @@
     <ClCompile Include="Scripting\API_Application.cpp" />
     <ClCompile Include="Scripting\API_Input.cpp" />
     <ClCompile Include="Scripting\API_Renderable.cpp" />
+    <ClCompile Include="Scripting\API_Resource.cpp" />
+    <ClCompile Include="Scripting\API_ResourceManager.cpp" />
     <ClCompile Include="Scripting\API_TimeCounter.cpp" />
     <ClCompile Include="Objects\Camera.cpp" />
     <ClCompile Include="Objects\Component.cpp" />
@@ -102,6 +104,8 @@
     <ClInclude Include="Scripting\API_Application.hpp" />
     <ClInclude Include="Scripting\API_Input.hpp" />
     <ClInclude Include="Scripting\API_Renderable.hpp" />
+    <ClInclude Include="Scripting\API_Resource.hpp" />
+    <ClInclude Include="Scripting\API_ResourceManager.hpp" />
     <ClInclude Include="Scripting\API_TimeCounter.hpp" />
     <ClInclude Include="Objects\Camera.hpp" />
     <ClInclude Include="Objects\Component.hpp" />
