Support for Texture in ResourceManager and Scripts

--- a/EngineQ/EngineQ/EngineQ.vcxproj.filters
+++ b/EngineQ/EngineQ/EngineQ.vcxproj.filters
@@ -60,6 +60,7 @@
     <ClCompile Include="Scripting\API_Resource.cpp" />
     <ClCompile Include="Scripting\API_ResourceManager.cpp" />
     <ClCompile Include="Utilities\Emiter.cpp" />
+    <ClCompile Include="Resources\TextureFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Framebuffer.hpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="Scripting\API_Resource.hpp" />
     <ClInclude Include="Scripting\API_ResourceManager.hpp" />
     <ClInclude Include="Utilities\Emiter.hpp" />
+    <ClInclude Include="Resources\TextureFactory.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Math\Vector2.inl" />
